--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,6 @@ jobs:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
-            mkdocs-material-
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
+            mkdocs-material-${{ env.cache_id }}
       - run: pip install mkdocs-material mkdocs-material[imaging] mkdocs-material-extensions
       - run: mkdocs gh-deploy --force
