--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,8 @@ theme:
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      primary: blue
-      scheme: default
+      primary: orange
+      scheme: slate
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
