--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,15 +23,15 @@ theme:
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      primary: orange
-      scheme: slate
+      primary: blue gray
+      scheme: default
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
-      primary: red
+      primary: teal
       scheme: slate
       toggle:
         icon: material/brightness-4
