extend mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,8 @@ theme:
     - toc.follow
     - navigation.top
     - search.highlight
+    - content.code.copy
+    - content.code.annotate
 
   # Font settings
   font:
@@ -93,7 +95,27 @@ markdown_extensions:
   - abbr
   - admonition
   - attr_list
-
+  - md_in_html
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - footnotes
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.details
+  - pymdownx.superfences
+  - tables
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 
 copyright: Copyright &copy; Bilgehan Çağrı Nevruz
