extend mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,9 +93,14 @@ plugins:
 
 markdown_extensions:
   - abbr
+  - tables
+  - footnotes
+  - md_in_html
   - admonition
   - attr_list
-  - md_in_html
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
@@ -107,12 +112,10 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - footnotes
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.details
   - pymdownx.superfences
-  - tables
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
